# Parcer_HH.RU_V2.0

./: .env_temp  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: db_creator.py  db_manager.py  hh_api.py
tests/: conftest.py  test_db_manager.py  test_hh_api.py
